dynamodel_tests/tests/fails/attribute/invalid_rename_all.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
#[dynamodel(rename_all = "unknown")]
struct InvalidRename {
    bytes: Vec<u8>,
}

fn main() {}
